Item detail created and hooked up on iphone/ipad

--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
@@ -254,15 +254,15 @@
                             </connections>
                         </searchBar>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ItemCell" textLabel="oLk-jB-AU4" style="IBUITableViewCellStyleDefault" id="5rQ-BI-yzK">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ItemCell" textLabel="oLk-jB-AU4" style="IBUITableViewCellStyleDefault" id="5rQ-BI-yzK">
                                 <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oLk-jB-AU4">
-                                            <rect key="frame" x="10" y="0.0" width="300" height="43"/>
+                                            <rect key="frame" x="10" y="0.0" width="280" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -271,6 +271,9 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <connections>
+                                    <segue destination="SgF-u3-sTk" kind="push" id="RTp-lA-5yC"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                     </tableView>
@@ -282,6 +285,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hi5-hf-c8Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="51" y="-564"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="z5Y-rp-F9d">
+            <objects>
+                <viewController id="SgF-u3-sTk" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vLl-mP-pKJ">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="pYL-eo-e2k"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e4N-lb-mjf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-501" y="-1138"/>
         </scene>
         <!--Navigation Controller - Items-->
         <scene sceneID="bCc-yc-2D5">
