--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
@@ -137,6 +137,21 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="iIE-z6-RiB">
+                                <rect key="frame" x="138" y="336" width="73" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Rpa-TM-AOn" kind="push" identifier="VideoDetail" id="Y3g-o9-emS"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -145,6 +160,30 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cZe-Rx-Wdq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="426" y="-1249"/>
+        </scene>
+        <!--Ability Video View Controller-->
+        <scene sceneID="Wa8-q6-Qhf">
+            <objects>
+                <viewController storyboardIdentifier="AbilityDetailVideo" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Rpa-TM-AOn" customClass="AbilityVideoViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8B3-Kf-vIz">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="88h-Ve-Ra8">
+                                <rect key="frame" x="55" y="11" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="JjZ-xl-kn0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sJk-mK-kp8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="875" y="-1249"/>
         </scene>
         <!--Abilities View Controller-->
         <scene sceneID="RKh-cU-SDJ">
@@ -218,6 +257,7 @@
                                             <outlet property="isPassiveLabel" destination="ESB-FB-F3j" id="waU-qg-kjL"/>
                                             <outlet property="mp" destination="gt5-sR-Skf" id="KOv-G8-7I4"/>
                                             <outlet property="mpIcon" destination="yvf-M1-BO8" id="LYr-9g-aSO"/>
+                                            <segue destination="hZw-Nn-U4y" kind="push" identifier="AbilityDetail" id="jYu-o8-wbf"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -400,13 +440,15 @@
         <class className="AbilityDetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AbilityDetailViewController.h"/>
         </class>
+        <class className="AbilityVideoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AbilityVideoViewController.h"/>
+        </class>
         <class className="BuildsViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildsViewController.h"/>
         </class>
         <class className="DetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
             <relationships>
-                <relationship kind="action" name="segmentChanged:" candidateClass="UISegmentedControl"/>
                 <relationship kind="outlet" name="iconImageView" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="segment" candidateClass="UISegmentedControl"/>
             </relationships>
