--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
@@ -223,7 +223,7 @@
                             </connections>
                         </searchBar>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ItemCell" textLabel="tal-iY-LZx" style="IBUITableViewCellStyleDefault" id="0TX-bZ-KrT">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ItemCell" textLabel="tal-iY-LZx" style="IBUITableViewCellStyleDefault" id="0TX-bZ-KrT" customClass="ItemCell">
                                 <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -240,6 +240,9 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <connections>
+                                    <outlet property="cellTitleLabel" destination="tal-iY-LZx" id="h8e-8E-NAT"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                     </tableView>
@@ -905,6 +908,7 @@
         <class className="DetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
             <relationships>
+                <relationship kind="action" name="segmentChanged:" candidateClass="UISegmentedControl"/>
                 <relationship kind="outlet" name="iconImageView" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="segment" candidateClass="UISegmentedControl"/>
             </relationships>
@@ -947,6 +951,14 @@
                 <relationship kind="outlet" name="sightRangeLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="strengthPointsLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="turnRateLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="ItemCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ItemCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="cellDetailLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="cellImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="cellTitleLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
         <class className="ItemsTableViewController" superclassName="UITableViewController">
